Fix truncation of repository descriptions

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,3 +25,6 @@ body {
 .MuiTouchRipple-child {
   filter: opacity(0.2) !important;
 }
+.text-cyan {
+  color: #18ffff!important
+}
